--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
   </header>
   <main>
     <section>
-      
+      <img src="./assets/imgs/Bitcoin.svg" alt="Bitcoin logo">
+      <div>
+        <h1>
+          La próxima revolución en el intercambio de criptomonedas.
+        </h1>
+        <p>
+          Batatabit te ayuda a navegar entre los diferentes precios y tendencias.
+        </p>
+        <a href="#">
+          Conoce Nuestros Planes
+          <span>></span>
+        </a>
+      </div>
     </section>
     <section>
 
