styled header trailer

--- a/index.html
+++ b/index.html
@@ -13,30 +13,33 @@
 </head>
 <body>
   <header>
-
+    <img src="./assets/imgs/logo.svg" alt="Bitcoin logo">
+    <div class="header--title-container">
+      <h1>
+        La próxima revolución en el intercambio de criptomonedas.
+      </h1>
+      <p>
+        Batatabit te ayuda a navegar entre los diferentes precios y tendencias.
+      </p>
+      <a class="header--button" href="#">
+        Conoce Nuestros Planes
+        <span>></span>
+      </a>
+    </div>
   </header>
   <main>
     <section>
-      <img src="./assets/imgs/Bitcoin.svg" alt="Bitcoin logo">
-      <div>
-        <h1>
-          La próxima revolución en el intercambio de criptomonedas.
-        </h1>
-        <p>
-          Batatabit te ayuda a navegar entre los diferentes precios y tendencias.
-        </p>
-        <a href="#">
-          Conoce Nuestros Planes
-          <span>></span>
-        </a>
-      </div>
+
     </section>
+
     <section>
 
     </section>
+
     <section>
 
     </section>
+
     <section>
 
     </section>
