--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </p>
       <a class="header--button" href="#">
         Conoce Nuestros Planes
-        <span>></span>
+        <span></span>
       </a>
     </div>
   </header>
