--- a/index.html
+++ b/index.html
@@ -28,8 +28,21 @@
     </div>
   </header>
   <main>
-    <section>
+    <section class="main-exchange-container">
+      <div class="backdground-img"></div>
+      <div class="main-exchange-container--title">
+        <h2>
+          Visibilizamos todas las tasas de cambio.
+        </h2>
+        <p>
+          Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.
+        </p>
+        <section class="main-tables-container">
+          <div>
 
+          </div>
+        </section>
+      </div>
     </section>
 
     <section>
