--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <h2>
           Visibilizamos todas las tasas de cambio.
         </h2>
-        <p>
+        <p class="title">
           Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.
         </p>
         <section class="main-tables-container">
           <div class="main-currency-table">
             <p class="currency-table--title">Monedas</p>
             <divv class="currency-table--container">
-              <table>
+              <table class="table1">
                 <tr>
                   <td class="table__top-left">Bitcoin</td>
                   <td class="table__top-right table__right">$ 1.96 <span></span></td>
@@ -52,7 +52,7 @@
                 </tr>
                 <tr>
                   <td>Ripple</td>
-                  <td class="table__right">$ 2.15 <span></span></td>
+                  <td class="table__  right">$ 2.15 <span></span></td>
                 </tr>
                   <td class="table__bottom-left">Stellar</td>
                   <td class="table__bottom-right table__right">$ 4.96 <span></span></td>
