--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
               <table class="table1">
                 <tr>
                   <td class="table__top-left">Bitcoin</td>
-                  <td class="table__top-right table__right">$ 1.96 <span></span></td>
+                  <td class="table__top-right table__right">$ 1.96 <span class="down"></span></td>
                 </tr>
                 <tr>
                   <td>Ethereum</td>
-                  <td class="table__right">$ 0.07 <span></span></td>
+                  <td class="table__right">$ 0.07 <span class="up"></span></td>
                 </tr>
                 <tr>
                   <td>Ripple</td>
-                  <td class="table__  right">$ 2.15 <span></span></td>
+                  <td class="table__right">$ 2.15 <span class="down"></span></td>
                 </tr>
                   <td class="table__bottom-left">Stellar</td>
-                  <td class="table__bottom-right table__right">$ 4.96 <span></span></td>
+                  <td class="table__bottom-right table__right">$ 4.96 <span class="down"></span></td>
                 </tr>
               </table>
             </div>
             <div class="currency-table--date">
-              <p><strong>Actualizado: 19 Julio 23:45</strong></p>
+              <p><strong>Actualizado: </strong>19 Julio 23:45</p>
             </div>
           </div>
         </section>
