--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
               <p><strong>Actualizado: </strong>19 Julio 23:45</p>
             </div>
           </div>
+          <div class="next_table_icon">
+            <span class="next_table__icon"></span>
+          </div>
         </section>
       </div>
     </section>
