--- a/index.html
+++ b/index.html
@@ -39,32 +39,35 @@
         </p>
         <section class="main-tables-container">
           <div class="main-currency-table">
-            <p class="currency-table--title">Monedas</p>
+            <p class="currency-table--title jsTitle">Monedas</p>
             <divv class="currency-table--container">
               <table class="table1">
                 <tr>
-                  <td class="table__top-left">Bitcoin</td>
-                  <td class="table__top-right table__right">$ 1.96 <span class="down"></span></td>
+                  <td class="table__top-left jsMoney1">Bitcoin</td>
+                  <td class="table__top-right table__right">$ 1.96 <span class="down jsIcon"></span></td>
                 </tr>
                 <tr>
-                  <td>Ethereum</td>
-                  <td class="table__right">$ 0.07 <span class="up"></span></td>
+                  <td class="jsMoney2">Ethereum</td>
+                  <td class="table__right">$ 0.07 <span class="up jsIcon"></span></td>
                 </tr>
                 <tr>
-                  <td>Ripple</td>
-                  <td class="table__right">$ 2.15 <span class="down"></span></td>
+                  <td class="jsMoney3">Ripple</td>
+                  <td class="table__right">$ 2.15 <span class="down jsIcon"></span></td>
                 </tr>
-                  <td class="table__bottom-left">Stellar</td>
-                  <td class="table__bottom-right table__right">$ 4.96 <span class="down"></span></td>
+                  <td class="table__bottom-left jsMoney4">Stellar</td>
+                  <td class="table__bottom-right table__right">$ 4.96 <span class="down jsIcon"></span></td>
                 </tr>
               </table>
             </div>
-            <div class="currency-table--date">
+            <div class="currency-table--date jsUpdated">
               <p><strong>Actualizado: </strong>19 Julio 23:45</p>
             </div>
           </div>
-          <div class="next_table_icon">
+          <div class="next_table_icon jsIconNextTable">
             <span class="next_table__icon"></span>
+          </div>
+          <div class="previous_table_icon jsIconPreviousTable">
+            <span class="previous_table__icon"></span>
           </div>
         </section>
       </div>
@@ -85,5 +88,6 @@
   <footer>
 
   </footer>
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
