--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
           </div>
         </section>
       </div>
-    </section class="main-product-detail">
-      <span></span>
-      <div>
+    </section>
+
+    <section class="main-product-detail">
+      <span class="product-detail--batata-logo"></span>
+      <div class="product-detail-title">
         <h2>
           Creamos un producto sin comparación.
         </h2>
