--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
         </article>
       </section>
     </section>
+
+    <section class="bitcoin-img-container">
+      <h2>
+        Conócelo hoy.
+      </h2>
+    </section>
   </main>
   <footer>
 
