--- a/index.html
+++ b/index.html
@@ -149,29 +149,69 @@
       </div>
 
       <section class="plans-container--slider">
-        <article class="plans-container--card">
+        <article class="plans-container--card monthly">
            <p class="recommended">
-            Recomendado
+            Básico
            </p>
-           <div class="plan-info-container">
-             <h3 class="plan-card--title">
-              Pago Anual
-             </h3>
-             <p class="plan-card--price">
-               <span>$</span>
-              99
-             </p>
-             <p class="plan-card-saving">
-              *Ahorras $129 comparado al plan mensual.
-             </p>
-             <button class="plan-card--call-to-action">
-              Escoger este <span></span>
-             </button>
-           </div>
+          <div class="plan-info-container">
+            <h3 class="plan-card--title">
+            Pago Mensual
+            </h3>
+            <p class="plan-card--price">
+              <span>$</span>
+            19
+            </p>
+            <p class="plan-card-saving">
+            *Paga 1 vez al mes desde el día de tu compra..
+            </p>
+            <button class="plan-card--call-to-action">
+            Escoger este <span></span>
+            </button>
+          </div>
         </article>
 
-      </section>
+        <article class="plans-container--card">
+          <p class="recommended">
+           Recomendado
+          </p>
+          <div class="plan-info-container">
+            <h3 class="plan-card--title">
+             Pago Anual
+            </h3>
+            <p class="plan-card--price">
+              <span>$</span>
+             99
+            </p>
+            <p class="plan-card-saving">
+             *Ahorras $129 comparado al plan mensual.
+            </p>
+            <button class="plan-card--call-to-action">
+             Escoger este <span></span>
+            </button>
+          </div>
+        </article>
 
+        <article class="plans-container--card unlimited">
+          <p class="recommended">
+            Ilimitado
+          </p>
+          <div class="plan-info-container">
+            <h3 class="plan-card--title">
+            De por vida
+            </h3>
+            <p class="plan-card--price">
+              <span>$</span>
+            129
+            </p>
+            <p class="plan-card-saving">
+            *Exclusiva par los primeros 100 clientes con un precio especial.
+            </p>
+            <button class="plan-card--call-to-action">
+            Escoger este <span></span>
+            </button>
+          </div>
+        </article>
+      </section>
     </section>
   </main>
   <footer>
