--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;0,700;1,400&family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="assets/css/mobile_style.css">
+  <link rel="stylesheet" href="assets/css/tablet.css" media="(min-width: 930px)">
 </head>
 <body>
   <header>
@@ -93,9 +94,6 @@
             Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.
           </p>
         </article>
-      </section>
-
-      <section class="product-cards--container">
         <article class="product-detail--card">
           <span class="eye icon"></span>
           <p class="product--card-title">
@@ -105,9 +103,6 @@
             Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.
           </p>
         </article>
-      </section>
-
-      <section class="product-cards--container">
         <article class="product-detail--card">
           <span class="dollar icon"></span>
           <p class="product--card-title">
@@ -117,9 +112,6 @@
             No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.
           </p>
         </article>
-      </section>
-
-      <section class="product-cards--container">
         <article class="product-detail--card">
           <span class="check-circle icon"></span>
           <p class="product--card-title">
@@ -215,7 +207,17 @@
     </section>
   </main>
   <footer>
-
+    <section class="footer--left">
+      <ul>
+        <li><a href="#">Linkedin</a></li>
+        <li><a href="#">Crunchbase</a></li>
+        <li><a href="#">Hackernews</a></li>
+      </ul>
+    </section>
+    <section class="footer--right">
+      <img src="./assets/icons/batata.svg" alt="Logo de Btatabit 2022">
+      <p>@eduerpj | &copy;2022</p>
+    </section>
   </footer>
   <script src="./assets/js/main.js"></script>
 </body>
